--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
 
 @font-face {
     font-family: "Radikal";
-    src: url("./assets/font/Nootype\ -\ Radikal.otf");
+    src: url("./assets/font/Nootype - Radikal.otf");
 }
 * {
     font-family: "Radikal";
