--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,8 @@ body {
 
 @font-face {
     font-family: "Radikal";
-    src: url("./assets/font/Nootype - Radikal.otf"),
-    url("./assets/font/Nootype - Radikal Bold.otf"),
-    url("./assets/font/Nootype - Radikal Bold Italic.otf"),
-    url("./assets/font/Nootype - Radikal Italic.otf");
+    src: url("./assets/font/radikal-webfont.woff2") format('woff2'),
+    url('./assets/font/radikal-webfont.woff') format('woff');
 }
 
 * {
