--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@ body {
 
 @font-face {
     font-family: "Radikal";
-    src: url("./assets/font/radikal-webfont.woff2") format('woff2'),
-    url('./assets/font/radikal-webfont.woff') format('woff');
+    src: url("./assets/font/Radikal.woff2") format('woff2'),
+    url('./assets/font/Radikal.woff') format('woff');
 }
 
 * {
