--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,11 @@ body {
 
 @font-face {
     font-family: "Radikal";
-    src: url("./assets/font/Radikal.woff2") format('woff2'),
+    src:
+    url("./assets/font/Radikal.woff2") format('woff2'),
     url('./assets/font/Radikal.woff') format('woff');
 }
+
 
 * {
     font-family: "Radikal";
