--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
     src:
     url("./assets/font/Radikal.woff2") format('woff2'),
     url('./assets/font/Radikal.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 /* Base */
 html,
