--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
-
 @font-face {
     font-family: "Radikal";
     src:
-    url("./assets/font/Radikal.woff2") format('woff2'),
+    url('./assets/font/Radikal.woff2') format('woff2'),
     url('./assets/font/Radikal.woff') format('woff');
     font-weight: normal;
     font-style: normal;
