--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: "Radikal";
     src:
-    url('./assets/font/Radikal.woff2') format('woff2'),
-    url('./assets/font/Radikal.woff') format('woff');
+    url('../src/assets/font/Radikal.woff2') format('woff2'),
+    url('../src/assets/font/Radikal.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -13,10 +13,6 @@ body {
     margin: 0;
     padding: 0;
 }
-
-/* Polices */
-
-
 
 
 * {
