--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -1,4 +1,4 @@
-header {
+.header {
   display: flex;
   align-items: center;
   padding: 40px 10%;
@@ -37,7 +37,7 @@ h1 {
 }
 
 @media screen and (max-width: 1490px) {
-  header {
+  .header {
     margin: 40px 2.5%;
     width: 95%;
     flex-direction: column;
